git-trigger/100-consumer-evt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consumer-evt-ingress
  namespace: bomc-tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: bomc.org
      http:
        paths:
          - path: /hooks
            pathType: Exact
            backend:
              service:
                name: el-github-listener-interceptor
                port:
                  number: 8080
